style.css
.body {
	min-width: max-content;
}
.board {
	width: 80vh;
	margin: 1%;
}

.info {
	width: 400px;
	margin: 1%;
	max-height: 80vh;
}

.movesHistory {
	flex-grow: 2;
	overflow-y: scroll;
}
.container {
	display: flex;
	justify-content: center;
	margin: auto;
}
.capturedPieces {
	height: 100%;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}
.blackPieces {
	display: flex;
}
.whitePieces {
	display: flex;
}

.blackCaptures,
.whiteCaptures {
	height: 3rem;
}
.left-side {
	margin: 1%;
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	/* align-self: flex-end; */
}
.left-side span {
	padding: 0.5rem;
	margin: auto;
	text-align: center;
}
.divider {
	flex-grow: 2;
}

#undoButton {
	box-shadow: inset 0px 1px 0px 0px #caefab;
	background-color: #418d4b;
	border-radius: 6px;
	border: 1px solid #268a16;
	display: inline-block;
	cursor: pointer;
	color: white;
	font-family: Arial;
	font-size: 15px;
	font-weight: bold;
	padding: 6px 24px;
	text-decoration: none;
	text-shadow: 0px 1px 0px #070706;
	align-self: center;
}
#undoButton:hover {
	background-color: #52b15f;
}
#undoButton:active {
	position: relative;
	top: 1px;
}

@media (max-width: 600px) {
	.container {
		flex-direction: column;
	}
	.left-side {
		flex-direction: row;
		align-self: start;
	}
	.board-b72b1 {
		/* margin: auto;
		padding-left:  */
	}
	.capturedPieces {
		flex-direction: row;
	}
}
/* 
.hoverClass {
	background: rgb(255, 232, 104);
	margin: auto auto;

	height: 30%;
	width: 30%;
	border-radius: 60%;
} */

